--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "mongoose": "^5.9.24",
     "mongoose-auto-increment": "^5.0.1",
     "pug": "^3.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
