--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.24",
     "mongoose-auto-increment": "^5.0.1",
-    "pug": "^3.0.0"
+    "mongoose-paginate-v2": "^1.3.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
