--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
   },
   "homepage": "https://github.com/Alejandro2134/MetalComunity#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.24",
     "mongoose-auto-increment": "^5.0.1",
-    "mongoose-paginate-v2": "^1.3.9"
+    "mongoose-paginate-v2": "^1.3.9",
+    "pug": "^3.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
