--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "moment": "^2.27.0",
     "mongoose": "^5.9.24",
     "mongoose-auto-increment": "^5.0.1",
-    "mongoose-paginate-v2": "^1.3.9",
-    "pug": "^3.0.0"
+    "mongoose-paginate-v2": "^1.3.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
