--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
     "helmet": "^3.23.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.27.0",
     "mongoose": "^5.9.24",
     "mongoose-auto-increment": "^5.0.1",
-    "mongoose-paginate-v2": "^1.3.9"
+    "mongoose-paginate-v2": "^1.3.9",
+    "node-fetch": "^2.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
